--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "postcss-nested": "^6.0.1",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-3d": "^1.0.6",
     "typescript": "^5.4.5",
