--- a/.prettierrc
+++ b/.prettierrc
@@ -10,5 +10,6 @@
   "plugins": [
     "prettier-plugin-tailwindcss"
   ],
-  "tailwindConfig": "./tailwind.config.mjs"
+  "tailwindConfig": "./tailwind.config.mjs",
+  "experimentalOperatorPosition": "start"
 }
