--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@vitejs/plugin-react-swc": "^3.7.0",
     "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.19",
+    "baseline-browser-mapping": "^2.9.19",
     "daisyui": "^4.12.2",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
