--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "react-dom": "^19",
     "react-intl": "^8.1.1",
     "react-router": "^7",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/compat": "^2.0.0",
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/typography": "^0.5.13",
+    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/node": "^24",
@@ -50,7 +50,6 @@
     "@typescript-eslint/parser": "^8.48.0",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "@vitest/ui": "^4.0.18",
-    "autoprefixer": "^10.4.19",
     "baseline-browser-mapping": "^2.9.19",
     "daisyui": "^5.5.14",
     "eslint": "^9",
@@ -58,15 +57,14 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-tailwindcss": "^3.18.2",
     "globals": "^16.5.0",
     "happy-dom": "^12.10.3",
-    "postcss": "^8.4.38",
-    "postcss-nested": "^6.0.1",
+    "postcss": "^8.5.6",
+    "postcss-nested": "^7.0.2",
     "prettier": "^3.7.3",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.3",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.4.5",
     "vite": "^7.3.1",
     "vite-tsconfig-paths": "^6.0.5",
