--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "isbot": "^5.1.34",
     "react": "^19",
     "react-dom": "^19",
     "react-intl": "^8.1.1",
@@ -41,6 +42,7 @@
     "@eslint/js": "^9",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/node": "^24",
@@ -48,8 +50,7 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
-    "@vitejs/plugin-react-swc": "^4.2.2",
-    "@vitest/ui": "^4.0.18",
+    "@vitejs/plugin-react": "^5.1.2",
     "baseline-browser-mapping": "^2.9.19",
     "daisyui": "^5.5.14",
     "eslint": "^9",
@@ -58,16 +59,14 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^16.5.0",
-    "happy-dom": "^12.10.3",
     "postcss": "^8.5.6",
     "postcss-nested": "^7.0.2",
     "prettier": "^3.7.3",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.4.5",
+    "typescript": "^5.9.3",
     "vite": "^7.3.1",
-    "vite-tsconfig-paths": "^6.0.5",
-    "vitest": "^4.0.18"
+    "vite-tsconfig-paths": "^6.0.5"
   }
 }
