--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,14 @@
 {
   "trailingComma": "none",
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
-  "jsxSingleQuote": false,
   "tabWidth": 2,
   "useTabs": false,
   "endOfLine": "auto",
-  "printWidth": 80,
+  "printWidth": 100,
+  "arrowParens": "avoid",
   "plugins": [
     "prettier-plugin-tailwindcss"
   ],
-  "tailwindConfig": "./tailwind.config.mjs",
   "experimentalOperatorPosition": "start"
 }
