--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "url": "https://github.com/sheariley"
   },
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
+    "start": "npm run dev",
+    "dev": "next dev",
+    "build": "next build",
+    "serve": "npx serve@latest ./build",
     "lint": "eslint src --max-warnings=0",
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
@@ -25,8 +25,10 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "eslint-config-next": "^16.1.6",
     "framer-motion": "^12.23.26",
     "isbot": "^5.1.34",
+    "next": "^16.1.6",
     "react": "^19",
     "react-dom": "^19",
     "react-intl": "^8.1.1",
